--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>WebDevTool</title>
         <script src="https://kit.fontawesome.com/c863d1a06d.js"
             crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="navbar">
@@ -14,7 +14,7 @@
                     style="color: #333fe6;"></i>Web<span>Dev</span>tool</div>
             <ul class="navbar-links">
                 <li><a href="login.html">LogIn</a></li>
-                <li><a href="iindex.html">Demo</a></li>
+                <li><a href="project.html">Demo</a></li>
             </ul>
         </div>
         <div class="hero">
@@ -24,7 +24,7 @@
             <div class="side2"></div>
             <div class="side3"></div>
             <div class="container">
-                <a href="iindex.html"><button>Introducting WebDevtool <i
+                <a href="project.html"><button>Introducting WebDevtool <i
                             class="fa-sharp fa-solid fa-code"
                             style="color: #69f5ff;"></i></button></a>
                 <div class="hero-text">
