--- a/project.html
+++ b/project.html
@@ -102,7 +102,7 @@
         <!-- Navigation Bar -->
         <div class="navbar">
             <div class="navbar-text">Web Dev Tool</div>
-            <a href="landing.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
 
         <!-- Main Content Container -->
