--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <title>WebDevTool</title>
         <script src="https://kit.fontawesome.com/c863d1a06d.js"
             crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="sign-up">
