--- a/auth.html
+++ b/auth.html
@@ -43,7 +43,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" id="logout" style="display: none;">Log Out</a></li>
+                    <li><a href="#" id="logout" style="display: none;">Log
+                            Out</a></li>
                 </ul>
             </div>
         </div>
@@ -56,7 +57,8 @@
 
                     <div class="col-sm-4">
                         <div class="form-group">
-                            <label for="email" style="color: white;"">Email</label>
+                            <label for="email"
+                                style="color: white;"">Email</label>
                             <input type="text" name="email" id="email"
                                 class="form-control"
                                 placeholder="Enter your email"
@@ -89,7 +91,8 @@
                     enctype="multipart/form-data">
                     <div class="col-sm-4">
                         <div class="form-group">
-                            <label for="email" style="color: white;"">Email</label>
+                            <label for="email"
+                                style="color: white;"">Email</label>
                             <input type="text" name="login_email"
                                 id="login_email" class="form-control"
                                 placeholder="Enter your email"
@@ -97,7 +100,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="password" style="color: white;">Password</label>
+                            <label for="password"
+                                style="color: white;">Password</label>
                             <input type="password" name="login_password"
                                 id="login_password" class="form-control"
                                 placeholder="Enter your password"
@@ -179,7 +183,7 @@
 		    alert(user.email+" Login successfully!!!");
 		    document.getElementById('logout').style.display = 'block';
             document.querySelector("form").reset();
-            window.location.href = "https://prabhaton.github.io/Code-editor/project.html";
+            window.location.href = "./project.html";
 		    // ...
 		  })
 		  .catch((error) => {
